builds/tests/312/data/attachments/7024ff0be2ddebe7.txt
2026-06-10 17:02:16,209 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-10 17:02:16,209 INFO     yoyo.migrations —  - applying step 0
2026-06-10 17:02:16,210 INFO     yoyo.migrations —  - applying step 1
2026-06-10 17:02:16,210 INFO     yoyo.migrations —  - applying step 2
2026-06-10 17:02:16,210 INFO     yoyo.migrations —  - applying step 3
2026-06-10 17:02:16,210 INFO     yoyo.migrations —  - applying step 4
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 5
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 6
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 7
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 8
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 9
2026-06-10 17:02:16,211 INFO     yoyo.migrations —  - applying step 10
2026-06-10 17:02:16,212 INFO     yoyo.migrations —  - applying step 11
2026-06-10 17:02:16,212 INFO     yoyo.migrations —  - applying step 12
2026-06-10 17:02:16,212 INFO     yoyo.migrations —  - applying step 13
2026-06-10 17:02:16,212 INFO     yoyo.migrations —  - applying step 14
2026-06-10 17:02:16,214 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-10 17:02:16,215 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-10 17:02:16,215 INFO     yoyo.migrations —  - applying step 0
2026-06-10 17:02:16,216 INFO     yoyo.migrations —  - applying step 1
2026-06-10 17:02:16,217 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-10 17:02:16,217 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-10 17:02:16,218 INFO     yoyo.migrations —  - applying step 0
2026-06-10 17:02:16,219 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-10 17:02:16,220 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-10 17:02:16,220 INFO     yoyo.migrations —  - applying step 0
2026-06-10 17:02:16,221 INFO     yoyo.migrations —  - applying step 1
2026-06-10 17:02:16,221 INFO     yoyo.migrations —  - applying step 2
2026-06-10 17:02:16,221 INFO     yoyo.migrations —  - applying step 3
2026-06-10 17:02:16,221 INFO     yoyo.migrations —  - applying step 4
2026-06-10 17:02:16,221 INFO     yoyo.migrations —  - applying step 5
2026-06-10 17:02:16,222 INFO     yoyo.migrations —  - applying step 6
2026-06-10 17:02:16,222 INFO     yoyo.migrations —  - applying step 7
2026-06-10 17:02:16,222 INFO     yoyo.migrations —  - applying step 8
2026-06-10 17:02:16,223 INFO     yoyo.migrations —  - applying step 9
2026-06-10 17:02:16,223 INFO     yoyo.migrations —  - applying step 10
2026-06-10 17:02:16,223 INFO     yoyo.migrations —  - applying step 11
2026-06-10 17:02:16,223 INFO     yoyo.migrations —  - applying step 12
2026-06-10 17:02:16,224 INFO     yoyo.migrations —  - applying step 13
2026-06-10 17:02:16,224 INFO     yoyo.migrations —  - applying step 14
2026-06-10 17:02:16,224 INFO     yoyo.migrations —  - applying step 15
2026-06-10 17:02:16,225 INFO     yoyo.migrations —  - applying step 16
2026-06-10 17:02:16,225 INFO     yoyo.migrations —  - applying step 17
2026-06-10 17:02:16,225 INFO     yoyo.migrations —  - applying step 18
2026-06-10 17:02:16,226 INFO     yoyo.migrations —  - applying step 19
2026-06-10 17:02:16,226 INFO     yoyo.migrations —  - applying step 20
2026-06-10 17:02:16,226 INFO     yoyo.migrations —  - applying step 21
2026-06-10 17:02:16,226 INFO     yoyo.migrations —  - applying step 22
2026-06-10 17:02:16,228 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-10 17:02:16,229 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-10 17:02:16,229 INFO     yoyo.migrations —  - applying step 0
2026-06-10 17:02:16,229 INFO     yoyo.migrations —  - applying step 1
2026-06-10 17:02:16,229 INFO     yoyo.migrations —  - applying step 2
2026-06-10 17:02:16,230 INFO     yoyo.migrations —  - applying step 3
2026-06-10 17:02:16,231 INFO     yoyo.migrations —  - applying step 4
2026-06-10 17:02:16,231 INFO     yoyo.migrations —  - applying step 5
2026-06-10 17:02:16,231 INFO     yoyo.migrations —  - applying step 6
2026-06-10 17:02:16,231 INFO     yoyo.migrations —  - applying step 7
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 8
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 9
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 10
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 11
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 12
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 13
2026-06-10 17:02:16,232 INFO     yoyo.migrations —  - applying step 14
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 15
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 16
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 17
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 18
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 19
2026-06-10 17:02:16,233 INFO     yoyo.migrations —  - applying step 20
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 21
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 22
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 23
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 24
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 25
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 26
2026-06-10 17:02:16,234 INFO     yoyo.migrations —  - applying step 27
2026-06-10 17:02:16,235 INFO     yoyo.migrations —  - applying step 28
2026-06-10 17:02:16,235 INFO     yoyo.migrations —  - applying step 29
2026-06-10 17:02:16,235 INFO     yoyo.migrations —  - applying step 30
2026-06-10 17:02:16,235 INFO     yoyo.migrations —  - applying step 31
2026-06-10 17:02:16,235 INFO     yoyo.migrations —  - applying step 32
2026-06-10 17:02:16,236 INFO     yoyo.migrations —  - applying step 33
2026-06-10 17:02:16,236 INFO     yoyo.migrations —  - applying step 34
2026-06-10 17:02:16,238 INFO     yoyo.migrations —  - applying step 35
2026-06-10 17:02:16,238 INFO     yoyo.migrations —  - applying step 36
2026-06-10 17:02:16,239 INFO     yoyo.migrations —  - applying step 37
2026-06-10 17:02:16,239 INFO     yoyo.migrations —  - applying step 38
2026-06-10 17:02:16,240 INFO     yoyo.migrations —  - applying step 39
2026-06-10 17:02:16,241 INFO     yoyo.migrations —  - applying step 40
2026-06-10 17:02:16,244 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-10 17:02:16,249 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-10 17:02:16,251 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 222, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 513, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
